Add history command

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "shortcut-quick-create",
   "title": "Shortcut Quick Create",
-  "description": "Shortcut Quick Create",
+  "description": "Quickly add a new story in Shortcut",
   "icon": "extension_icon.png",
   "author": "chad_mcelligott",
   "categories": [
@@ -11,17 +11,24 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "index",
-      "title": "Shortcut Quick Create",
-      "subtitle": "Shortcut Quick Create",
-      "description": "Shortcut Quick Create",
+      "name": "create",
+      "title": "Quick Create Story",
+      "subtitle": "Shortcut",
+      "description": "Quickly add a new story in Shortcut",
+      "mode": "view"
+    },
+    {
+      "name": "history",
+      "title": "Show Quick Create History",
+      "subtitle": "Shortcut",
+      "description": "Show stories matching your Shortcut Quick Create criteria",
       "mode": "view"
     }
   ],
   "preferences": [
     {
       "name": "apiToken",
-      "description": "Provides access to your Shortcut instance. Retrieve one at https://app.shortcut.com/settings/account/api-tokens.",
+      "description": "Provides access to your Shortcut instance. Retrieve your token at https://app.shortcut.com/settings/account/api-tokens.",
       "type": "password",
       "required": true,
       "title": "Shortcut API Token"
@@ -29,6 +36,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.69.0",
+    "@raycast/utils": "^1.13.1",
     "isomorphic-fetch": "^3.0.0",
     "ky": "^1.2.2"
   },
