--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "react-jsx",
     "resolveJsonModule": true,
     "paths": {
-      "#src/*": ["src/*"]
+      "#src/*": ["./src/*"]
     }
   }
 }
